// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Swaps should render correctly when empty 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  style={
    {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 8,
        }
      }
    />
  </View>
</RCTScrollView>
`;

exports[`Swaps should render failed swaps 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  style={
    {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "gap": 4,
            "opacity": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFCFA",
              "borderColor": "#099DE2",
              "borderRadius": 12,
              "borderWidth": 1,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              }
            }
          >
            <View
              style={
                {
                  "flexShrink": 1,
                  "gap": 4,
                }
              }
            >
              <View
                style={
                  {
                    "height": 17,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                        {
                          "marginBottom": -40,
                          "marginTop": -40,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  swap failed
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 6,
                  }
                }
              >
                <test-file-stub
                  fill="#DF321F"
                  style={
                    [
                      {
                        "height": 16,
                        "width": 16,
                      },
                      undefined,
                    ]
                  }
                />
                <View
                  style={
                    {
                      "height": 17,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          [
                            {
                              "color": "#7D675E",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 14,
                              "letterSpacing": 0.14,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                          {
                            "marginBottom": -40,
                            "marginTop": -40,
                          },
                        ],
                        false,
                      ]
                    }
                    suppressHighlighting={true}
                  >
                    swap out
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "height": 40,
                    "paddingBottom": 1,
                    "paddingTop": 4,
                    "width": 141,
                  },
                  {
                    "gap": 6,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    undefined,
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    {
                      "height": 10,
                      "width": 130,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexShrink": 0,
                      },
                      {
                        "paddingBottom": 2,
                        "paddingLeft": 2,
                        "paddingRight": 2,
                        "paddingTop": 2,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 12,
                          "width": 12,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      {
                        "gap": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "opacity": 0.1,
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      0.00 0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      30 178
                    </Text>
                  </View>
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 14,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                            "marginBottom": -10,
                            "marginTop": -10,
                          },
                          false,
                        ],
                        false,
                      ]
                    }
                  >
                    sats
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Swaps should render pending swaps 1`] = `
<RCTScrollView
  contentContainerStyle={
    {
      "flexGrow": 1,
    }
  }
  showsHorizontalScrollIndicator={false}
  showsVerticalScrollIndicator={false}
  style={
    {
      "flexGrow": 1,
    }
  }
>
  <View>
    <View
      onStartShouldSetResponder={[Function]}
      style={
        {
          "gap": 8,
        }
      }
    >
      <View
        collapsable={false}
        style={
          {
            "gap": 4,
            "opacity": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFCFA",
              "borderColor": "#099DE2",
              "borderRadius": 12,
              "borderWidth": 1,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              }
            }
          >
            <View
              style={
                {
                  "flexShrink": 1,
                  "gap": 4,
                }
              }
            >
              <View
                style={
                  {
                    "height": 17,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                        {
                          "marginBottom": -40,
                          "marginTop": -40,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  pending swap
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 6,
                  }
                }
              >
                <ActivityIndicator
                  color="#F56522"
                  size="small"
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                />
                <View
                  style={
                    {
                      "height": 17,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          [
                            {
                              "color": "#7D675E",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 14,
                              "letterSpacing": 0.14,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                          {
                            "marginBottom": -40,
                            "marginTop": -40,
                          },
                        ],
                        false,
                      ]
                    }
                    suppressHighlighting={true}
                  >
                    swap out
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "height": 40,
                    "paddingBottom": 1,
                    "paddingTop": 4,
                    "width": 141,
                  },
                  {
                    "gap": 6,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    undefined,
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    {
                      "height": 10,
                      "width": 130,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexShrink": 0,
                      },
                      {
                        "paddingBottom": 2,
                        "paddingLeft": 2,
                        "paddingRight": 2,
                        "paddingTop": 2,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 12,
                          "width": 12,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      {
                        "gap": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "opacity": 0.1,
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      0.00 0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      30 178
                    </Text>
                  </View>
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 14,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                            "marginBottom": -10,
                            "marginTop": -10,
                          },
                          false,
                        ],
                        false,
                      ]
                    }
                  >
                    sats
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
      <View
        collapsable={false}
        style={
          {
            "gap": 4,
            "opacity": 1,
          }
        }
      >
        <View
          accessibilityState={
            {
              "busy": undefined,
              "checked": undefined,
              "disabled": undefined,
              "expanded": undefined,
              "selected": undefined,
            }
          }
          accessibilityValue={
            {
              "max": undefined,
              "min": undefined,
              "now": undefined,
              "text": undefined,
            }
          }
          accessible={true}
          collapsable={false}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            {
              "backgroundColor": "#FFFCFA",
              "borderColor": "#099DE2",
              "borderRadius": 12,
              "borderWidth": 1,
              "opacity": 1,
              "overflow": "hidden",
            }
          }
        >
          <View
            style={
              {
                "alignItems": "center",
                "flexDirection": "row",
                "justifyContent": "space-between",
                "paddingBottom": 12,
                "paddingLeft": 16,
                "paddingRight": 16,
                "paddingTop": 12,
              }
            }
          >
            <View
              style={
                {
                  "flexShrink": 1,
                  "gap": 4,
                }
              }
            >
              <View
                style={
                  {
                    "height": 17,
                    "justifyContent": "center",
                  }
                }
              >
                <Text
                  allowFontScaling={false}
                  numberOfLines={1}
                  style={
                    [
                      {
                        "color": "#2B1911",
                        "fontFamily": "Baloo2-Regular",
                        "fontSize": 16,
                        "letterSpacing": 0.16,
                        "lineHeight": 24,
                      },
                      [
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 28,
                          },
                          undefined,
                        ],
                        {
                          "marginBottom": -40,
                          "marginTop": -40,
                        },
                      ],
                      false,
                    ]
                  }
                >
                  pending swap
                </Text>
              </View>
              <View
                style={
                  {
                    "alignItems": "center",
                    "flexDirection": "row",
                    "gap": 6,
                  }
                }
              >
                <ActivityIndicator
                  color="#F56522"
                  size="small"
                  style={
                    {
                      "height": 16,
                      "width": 16,
                    }
                  }
                />
                <View
                  style={
                    {
                      "height": 17,
                      "justifyContent": "center",
                    }
                  }
                >
                  <Text
                    allowFontScaling={false}
                    numberOfLines={1}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          [
                            {
                              "color": "#7D675E",
                              "fontFamily": "Baloo2-Regular",
                              "fontSize": 14,
                              "letterSpacing": 0.14,
                              "lineHeight": 20,
                            },
                            undefined,
                          ],
                          {
                            "marginBottom": -40,
                            "marginTop": -40,
                          },
                        ],
                        false,
                      ]
                    }
                    suppressHighlighting={true}
                  >
                    swap out
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={
                [
                  {
                    "alignItems": "flex-end",
                    "height": 40,
                    "paddingBottom": 1,
                    "paddingTop": 4,
                    "width": 141,
                  },
                  {
                    "gap": 6,
                  },
                ]
              }
            >
              <View
                style={
                  [
                    undefined,
                    {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "space-between",
                    },
                    {
                      "height": 10,
                      "width": 130,
                    },
                  ]
                }
              >
                <View
                  style={
                    [
                      {
                        "flexShrink": 0,
                      },
                      {
                        "paddingBottom": 2,
                        "paddingLeft": 2,
                        "paddingRight": 2,
                        "paddingTop": 2,
                      },
                    ]
                  }
                >
                  <test-file-stub
                    fill="#888"
                    style={
                      [
                        {
                          "height": 12,
                          "width": 12,
                        },
                        undefined,
                      ]
                    }
                  />
                </View>
                <View
                  style={
                    [
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                      },
                      {
                        "gap": 2,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      {
                        "alignItems": "center",
                        "flexBasis": "0%",
                        "flexDirection": "row",
                        "flexGrow": 1,
                        "flexShrink": 1,
                        "justifyContent": "flex-end",
                      }
                    }
                  >
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "opacity": 0.1,
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      0.00 0
                    </Text>
                    <Text
                      allowFontScaling={false}
                      style={
                        [
                          {
                            "color": "#2B1911",
                            "fontFamily": "Baloo2-Regular",
                            "fontSize": 16,
                            "letterSpacing": 0.16,
                            "lineHeight": 24,
                          },
                          [
                            {
                              "textAlign": "right",
                            },
                            [
                              {
                                "fontFamily": "Baloo2-SemiBold",
                                "fontSize": 14,
                                "letterSpacing": 0.14,
                                "lineHeight": 22,
                                "marginBottom": -10,
                                "marginTop": -10,
                              },
                              false,
                            ],
                          ],
                          false,
                        ]
                      }
                    >
                      30 143
                    </Text>
                  </View>
                  <Text
                    allowFontScaling={false}
                    style={
                      [
                        {
                          "color": "#2B1911",
                          "fontFamily": "Baloo2-Regular",
                          "fontSize": 16,
                          "letterSpacing": 0.16,
                          "lineHeight": 24,
                        },
                        [
                          {
                            "fontFamily": "Baloo2-SemiBold",
                            "fontSize": 14,
                            "letterSpacing": 0.14,
                            "lineHeight": 22,
                            "marginBottom": -10,
                            "marginTop": -10,
                          },
                          false,
                        ],
                        false,
                      ]
                    }
                  >
                    sats
                  </Text>
                </View>
              </View>
            </View>
          </View>
        </View>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`Swaps should show completed swaps for 5 seconds 1`] = `
"Snapshot Diff:
- First value
+ Second value

@@ -127,11 +127,11 @@
                        ],
                        false,
                      ]
                    }
                  >
-                   swap complete
+                   pending swap
                  </Text>
                </View>
                <View
                  style={
                    Object {
@@ -139,20 +139,18 @@
                      "flexDirection": "row",
                      "gap": 6,
                    }
                  }
                >
-                 <test-file-stub
-                   fill="#65A519"
+                 <ActivityIndicator
+                   color="#F56522"
+                   size="small"
                    style={
-                     Array [
                      Object {
                        "height": 16,
                        "width": 16,
-                       },
-                       undefined,
-                     ]
+                     }
                    }
                  />
                  <View
                    style={
                      Object {"
`;

exports[`Swaps should show completed swaps for 5 seconds 2`] = `
"Snapshot Diff:
Compared values have no visual difference."
`;
